doc update, and failed attempt getting welcome page to load without using a controller
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/psu/trunk/genlib/java/crawl@16050 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,10 +35,10 @@
 		<servlet-name>crawl</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-    
-    
-    
-    <!-- this is for the Web-Artemis.inc file -->
+
+
+
+	<!-- this is for the Web-Artemis.inc file -->
 	<mime-mapping>
 		<extension>.inc</extension>
 		<mime-type>text/html</mime-type>
@@ -61,10 +61,11 @@
 	</context-param>
 
 	<welcome-file-list>
-		<welcome-file>
-            index.jsp
-        </welcome-file>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
+
+
 
 </web-app>
 
