fixed test for pullWebArtemis
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/psu/trunk/genlib/java/crawl@16053 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/build.gradle
+++ b/build.gradle
@@ -190,7 +190,7 @@ war.doFirst{
 	
 	def webArtemisClone = new File(tmpResourcesPath + "/" + webArtemisClonePath)
 	
-	if (pullWebArtemis && !webArtemisClone.isDirectory()) {
+	if (pullWebArtemis == "true" && !webArtemisClone.isDirectory()) {
 		println "Cloning Web-Artemis into " + tmpResourcesPath + webArtemisClonePath
 		gitClone('https://github.com/sanger-pathogens/Web-Artemis.git', file(tmpResourcesPath))
 	}
