Initial attempt at FTP support (for Picard).
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/psu/trunk/genlib/java/crawl@16070 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,9 @@ dependencies {
     compile group: 'org.mybatis', name: 'mybatis', version:'3.0.4'
     compile group: 'org.mybatis', name: 'mybatis-hazelcast', version:'1.0.0'
     
-    compile group: 'commons-lang', name: 'commons-lang', version:'2.5'
+    compile group: 'commons-lang', name: 'commons-lang', version:'2.2'
+	compile group: 'commons-net', name: 'commons-net', version:'2.2'
+	
     compile group: 'org.elasticsearch', name: 'elasticsearch', version:'0.16.0'
     
     compile group: 'org.codehaus.jackson', name: 'jackson-xc', version:'1.7.5'
