Modifying ci services deployment.
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/psu/trunk/genlib/java/crawl@16142 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/resource-chado-public-ci.properties
+++ b/resource-chado-public-ci.properties
@@ -1,5 +1,5 @@
-deploy.dir=/nfs/pathdb/genedb/services-ci/webapps
-deploy.name=snapshot-services-ci
+deploy.dir=/nfs/pathdb/genedb/ci-web/webapps
+deploy.name=services
 
 alignments=
 showParameters=false
