Added eror handling.
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/psu/trunk/genlib/java/crawl@16312 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/build.gradle
+++ b/build.gradle
@@ -301,7 +301,9 @@ task wrapper(type: Wrapper) {
  */
 def gitClone(String url, File dir) {
 	dir.mkdirs()
-	['git','clone', url].execute(null, dir)
+	def proc = ['git','clone', url].execute(null, dir)
+	proc.waitFor()
+	if (proc.exitValue > 1) throw new Exception (proc.err.text)
 }
 
 
