--- a/resource-chado-smansoni.properties
+++ b/resource-chado-smansoni.properties
@@ -1,5 +1,5 @@
-deploy.dir=/nfs/pathdb/genedb/services-test/webapps
-deploy.name=smansoni
+deploy.dir=/nfs/pathdb/genedb/services-smansoni/webapps
+deploy.name=services
 
 alignments=
 showParameters=false
