Fix to allow multiple deployments on the same tomcat.
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/psu/trunk/genlib/java/crawl@16362 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,16 @@
 		<param-value>/WEB-INF/log4j.properties</param-value>
 	</context-param>
 
+	<context-param>
+	    <!--  
+	        very important - this allows multiple deployments on the same tomcat, see
+	        - http://forum.springframework.org/archive/index.php/t-32873.html
+	        - http://blog.richeton.com/2010/06/22/how-to-solve-error-listenerstart-error-with-spring-log4j-and-tomcat/
+	     -->
+		<param-name>log4jExposeWebAppRoot</param-name>
+		<param-value>false</param-value>
+	</context-param>
+    
 	<listener>
 		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	</listener>
