Modified smansoni deployment conf.
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/psu/trunk/genlib/java/crawl@16367 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/resource-chado-smansoni.properties
+++ b/resource-chado-smansoni.properties
@@ -1,5 +1,5 @@
-deploy.dir=/nfs/pathdb/genedb/services-smansoni/webapps
-deploy.name=services
+deploy.dir=/nfs/pathdb/genedb/services-test/webapps
+deploy.name=smansoni
 
 alignments=
 showParameters=false
