--- a/src/main/webapp/WEB-INF/log4j.properties
+++ b/src/main/webapp/WEB-INF/log4j.properties
@@ -6,9 +6,9 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p %F:%L - <%m>%n
 
 log4j.logger.org.genedb.crawl=DEBUG
-#log4j.logger.java.sql=DEBUG
-#log4j.logger.com.ibatis=TRACE
-#log4j.logger.org.postgresql=DEBUG
+log4j.logger.java.sql=DEBUG
+log4j.logger.com.ibatis=TRACE
+log4j.logger.org.postgresql=DEBUG
 #log4j.logger.org.elasticsearch=DEBUG
 
 #log4j.logger.org.genedb.crawl.business.GenerateLuceneIndex=DEBUG
