--- a/resource-elasticsearch-vrtrack.properties
+++ b/resource-elasticsearch-vrtrack.properties
@@ -1,5 +1,5 @@
 deploy.dir=/nfs/pathdb/genedb/services-test/webapps
-deploy.name=vrrack
+deploy.name=vrtrack
 
 alignments=/lustre/scratch103/pathogen/pathpipe/prokaryotes/alignments.json
 showParameters=true
