--- a/build.gradle
+++ b/build.gradle
@@ -303,7 +303,7 @@ task wrapper(type: Wrapper) {
  */
 def gitClone(String url, File dir) {
 	dir.mkdirs()
-	def proc = ['git','clone', url].execute(null, dir)
+	def proc = ['env', 'GIT_SSL_NO_VERIFY=true', 'git','clone', url].execute(null, dir)
 	proc.waitFor()
 	if (proc.exitValue() > 1) throw new Exception (proc.err.text)
 }
