Added back alignments.json file.

--- a/resource-chado-public-gv1.properties
+++ b/resource-chado-public-gv1.properties
@@ -1,7 +1,7 @@
 deploy.dir=/Users/gv1/bin/tomcat/webapps/
 deploy.name=services
 
-alignments=
+alignments=etc/alignments.json
 showParameters=false
 
 resource.type=chado-postgres
