Moved the ci services to the services-test server.

--- a/resource-chado-public-ci.properties
+++ b/resource-chado-public-ci.properties
@@ -1,5 +1,5 @@
-deploy.dir=/nfs/pathdb/genedb/services-ci/webapps
-deploy.name=services
+deploy.dir=/nfs/pathdb/genedb/services-test/webapps
+deploy.name=services-ci
 
 alignments=
 showParameters=false
