--- a/resource-chado-public-ci.properties
+++ b/resource-chado-public-ci.properties
@@ -1,5 +1,5 @@
-deploy.dir=/nfs/pathdb/genedb/services-test/webapps
-deploy.name=services-ci
+deploy.dir=/nfs/pathdb/genedb/ci-web/webapps
+deploy.name=services
 
 alignments=
 showParameters=false
