--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,6 @@ config=resource-chado-public.properties
 fat=false
 pullWebArtemis=false
 hazelcast=etc/config/hazelcast-default.xml
+webArtemisGitUri=https://github.com/sanger-pathogens/Web-Artemis.git
+webArtemisGitBranch=master
+webArtemisInitialChromosome=Pf3D7_01
