--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,7 +2,8 @@ log4j.rootLogger=INFO, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%p [%C:%L] %m%n
+#log4j.appender.stdout.layout.ConversionPattern=%p [%C:%L] %m%n
+log4j.appender.stdout.layout.ConversionPattern=[%C{1}.%M.%L]\t%m%n
 
 #log4j.logger.org.genedb.crawl=DEBUG
 #log4j.logger.java.sql=DEBUG
