--- a/src/main/webapp/WEB-INF/log4j.properties
+++ b/src/main/webapp/WEB-INF/log4j.properties
@@ -1,14 +1,18 @@
 # For all other servers: Comment out the Log4J listener in web.xml to activate Log4J.
-log4j.rootLogger=INFO, stdout, logfile
+log4j.rootLogger=INFO, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d %p %F:%L - <%m>%n
+log4j.appender.stdout.layout.ConversionPattern=%m%n
+log4j.appender.stdout.layout.ConversionPattern=[%C{1}.%M]\t%m%n
+#log4j.appender.stdout.layout.ConversionPattern=%m%n
 
 log4j.logger.org.genedb.crawl=DEBUG
 log4j.logger.java.sql=DEBUG
 log4j.logger.com.ibatis=TRACE
 log4j.logger.org.postgresql=DEBUG
+log4j.logger.uk.ac.sanger.artemis.components.variant=DEBUG
+
 #log4j.logger.org.elasticsearch=DEBUG
 
 #log4j.logger.org.genedb.crawl.business.GenerateLuceneIndex=DEBUG
