added dates back to logging

--- a/src/main/webapp/WEB-INF/log4j.properties
+++ b/src/main/webapp/WEB-INF/log4j.properties
@@ -3,8 +3,8 @@ log4j.rootLogger=INFO, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%m%n
-log4j.appender.stdout.layout.ConversionPattern=[%C{1}.%M]\t%m%n
+#log4j.appender.stdout.layout.ConversionPattern=%m%n
+log4j.appender.stdout.layout.ConversionPattern=%d [%C{1}.%M] %m%n
 #log4j.appender.stdout.layout.ConversionPattern=%m%n
 
 log4j.logger.org.genedb.crawl=DEBUG
