added more genedb nexus repos

--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,8 @@ repositories {
     mavenRepo urls: ["https://developer.genedb.org/nexus/content/repositories/java.net-m2"]
     mavenRepo urls: ["https://developer.genedb.org/nexus/content/repositories/central/"]
     mavenRepo urls: ["https://developer.genedb.org/nexus/content/repositories/ApacheReleases/"]
-    mavenRepo urls: ["https://developer.genedb.org/nexus/content/repositories/ApacheReleases/"]
+    mavenRepo urls: ["https://developer.genedb.org/nexus/content/repositories/ApachePublic/"]
+    mavenRepo urls: ["https://developer.genedb.org/nexus/content/repositories/apache-snapshots/"]
     mavenRepo urls: ["https://developer.genedb.org/nexus/content/repositories/codehaus-snapshots/"]
     mavenRepo urls: ["https://developer.genedb.org/nexus/content/repositories/spring-external/"]
     mavenRepo urls: ["https://developer.genedb.org/nexus/content/repositories/spring-release/"]
@@ -55,7 +56,7 @@ repositories {
     mavenRepo urls: ["http://repository.jboss.org/maven2"]
     
     mavenRepo urls: ["http://www.ebi.ac.uk/~maven/m2repo"]
-    mavenRepo urls: ["https://repository.apache.org/content/groups/public/"]
+    mavenRepo urls: ["http://repository.apache.org/content/groups/public/"]
     //mavenRepo urls: ["http://www.biojava.org/download/maven/"]
     
     mavenRepo urls: ["http://repository.springsource.com/maven/bundles/release"]
