changed public deployment name

--- a/resource-chado-public.properties
+++ b/resource-chado-public.properties
@@ -1,5 +1,5 @@
 deploy.dir=/nfs/pathdb/genedb/services/webapps
-deploy.name=snapshot-services
+deploy.name=services
 
 alignments=etc/alignments.json
 showParameters=false
