--- a/build.gradle
+++ b/build.gradle
@@ -78,7 +78,7 @@ dependencies {
     
     compile group: 'org.postgresql', name: 'com.springsource.org.postgresql.jdbc4', version:'8.3.604'
     
-	compile group: 'com.hazelcast', name:'hazelcast', version:'1.9.3'
+	compile group: 'com.hazelcast', name:'hazelcast', version:'1.9.3.1'
 	
     compile group: 'org.mybatis', name: 'mybatis', version:'3.0.5'
     compile group: 'org.mybatis', name: 'mybatis-hazelcast', version:'1.0.0'
@@ -105,6 +105,14 @@ dependencies {
     compile group: 'org.apache.cxf', name: 'cxf-rt-frontend-jaxws', version: '2.2.6'
     compile group: 'org.apache.cxf', name: 'cxf-rt-transports-http', version: '2.2.6'
     
+    
+    
+    //compile group: 'org.neo4j', name: 'neo4j', version: '1.4.1'
+    //compile group: 'org.neo4j', name: 'neo4j-kernel', version: '1.4.1'
+    //compile group: 'org.neo4j', name: 'neo4j-meta-model', version: '0.9-SNAPSHOT'
+    
+    
+    
     compile group: 'uk.ac.ebi.das', name:'jdas', version: '1.0.1'
 	
 	// note that this information is matched up to jars in the local repository by the use of naming convention assumptions
@@ -112,6 +120,12 @@ dependencies {
 	compile group: 'net.sf', name: 'sam', version: '1.45', ext: 'jar'
 	compile group: 'org.sanger', name: 'artemis', version: 'v13.2.1', ext:'jar'
     compile group: 'org.biojava', name: 'biojava', version: '1.6', ext:'jar'
+    
+//    compile group: 'com.hp.hpl.jena', name: 'jena', version: '2.6.4'
+//    compile group: 'edu.stanford.smi.protege', name: 'protege', version: '3.4.7'
+//    compile group: 'edu.stanford.smi.protege', name: 'protege-owl', version: '3.4.7'
+//    compile group: 'edu.stanford.smi.protege', name: 'orphanNodesAlg'
+    
 	
 	// does not currently work with eclipse target
     // compile fileTree(dir: 'lib/local', includes: ['**.jar'])
