added logging of hazelcast events, which showed misconfigurations, changed hazelcast config accordingly

--- a/src/main/webapp/WEB-INF/log4j.properties
+++ b/src/main/webapp/WEB-INF/log4j.properties
@@ -4,7 +4,8 @@ log4j.rootLogger=INFO, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 #log4j.appender.stdout.layout.ConversionPattern=%m%n
-log4j.appender.stdout.layout.ConversionPattern=%d [%C{1}.%M] %m%n
+# the %X{webAppName} is set up by the CrawlServletContextListener
+log4j.appender.stdout.layout.ConversionPattern=%X{webAppName} %d [%C{1}.%M] %m%n
 #log4j.appender.stdout.layout.ConversionPattern=%m%n
 
 log4j.logger.org.genedb.crawl=DEBUG
