changed cluster host

--- a/resource-elasticsearch-vrtrack-helminths.properties
+++ b/resource-elasticsearch-vrtrack-helminths.properties
@@ -5,7 +5,7 @@ alignments=/lustre/scratch103/pathogen/pathpipe/helminths/alignments.json
 showParameters=true
 
 resource.type=elasticsearch-remote
-resource.elasticsearch.address.host=t81-lucene-dev
+resource.elasticsearch.address.host=t81-lucene
 resource.elasticsearch.address.port=9300
 resource.elasticsearch.cluster.name=test
 
