--- a/build.gradle
+++ b/build.gradle
@@ -78,7 +78,7 @@ dependencies {
     
     compile group: 'org.postgresql', name: 'com.springsource.org.postgresql.jdbc4', version:'8.3.604'
     
-	compile group: 'com.hazelcast', name:'hazelcast', version:'1.9.3.1'
+	compile group: 'com.hazelcast', name:'hazelcast', version:'1.9.4-RC1'
 	
     compile group: 'org.mybatis', name: 'mybatis', version:'3.0.5'
     compile group: 'org.mybatis', name: 'mybatis-hazelcast', version:'1.0.0'
