added alignments to smansoni

--- a/resource-chado-smansoni.properties
+++ b/resource-chado-smansoni.properties
@@ -1,7 +1,7 @@
 deploy.dir=/nfs/pathdb/genedb/services/webapps
 deploy.name=smansoni
 
-alignments=
+alignments=/lustre/scratch103/pathogen/pathpipe/helminths/alignments.json
 showParameters=false
 
 resource.type=chado-postgres
