--- a/resource-elasticsearch-vrtrack-prokaryotes.properties
+++ b/resource-elasticsearch-vrtrack-prokaryotes.properties
@@ -1,5 +1,5 @@
 deploy.dir=/nfs/pathdb/genedb/services-test/webapps
-deploy.name=helminths
+deploy.name=prokaryotes
 
 alignments=/lustre/scratch103/pathogen/pathpipe/prokaryotes/alignments.json
 showParameters=true
