added alignments to property file

--- a/resource-chado-public-gv1.properties
+++ b/resource-chado-public-gv1.properties
@@ -1,10 +1,12 @@
 deploy.dir=/Users/gv1/bin/tomcat/webapps/
 deploy.name=services
 
-alignments=
+alignments=etc/alignments.json
 showParameters=false
 
 resource.type=chado-postgres
+
+
 
 dbhost=db.genedb.org
 dbport=5432
