--- a/resource-elasticsearch-local.properties
+++ b/resource-elasticsearch-local.properties
@@ -10,6 +10,7 @@ resource.elasticsearch.local.pathdata=es/data
 
 
 resource.elasticsearch.index=annotations
+resource.elasticsearch.ontologyIndex=ontology
 resource.elasticsearch.regionType=region
 resource.elasticsearch.featureType=feature
 resource.elasticsearch.organismType=organism
