made a pull of web artemis happen by default

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 config=resource-chado-public.properties
 fat=false
-pullWebArtemis=false
+pullWebArtemis=true
 hazelcast=hazelcast-default.xml
 webArtemisGitUri=https://github.com/sanger-pathogens/Web-Artemis.git
 webArtemisGitBranch=master
