reinstated hazelcast xml config, because spring config doesn't work with mybatis-hazelcast

--- a/build.gradle
+++ b/build.gradle
@@ -81,8 +81,8 @@ dependencies {
     
     compile group: 'org.postgresql', name: 'com.springsource.org.postgresql.jdbc4', version:'8.3.604'
     
-	compile group: 'com.hazelcast', name:'hazelcast', version:'1.9.4.3'
-    compile group: 'com.hazelcast', name:'hazelcast-spring', version:'1.9.4.3'
+	compile group: 'com.hazelcast', name:'hazelcast', version:'1.9.4.4'
+    compile group: 'com.hazelcast', name:'hazelcast-spring', version:'1.9.4.4'
 	
     compile group: 'org.mybatis', name: 'mybatis', version:'3.0.5'
     compile group: 'org.mybatis', name: 'mybatis-hazelcast', version:'1.0.0'
@@ -311,13 +311,13 @@ war.doFirst{
 	
 	new File("tmp/WEB-INF/classes/").mkdirs()
 	
-//    if (props["hazelcast"] != null)
-//        hazelcast = props["hazelcast"]
-//    
-//	ant.copy (
-//		file: hazelcast,
-//		toFile:'tmp/WEB-INF/classes/hazelcast.xml',
-//		overwrite:'true' )
+    if (props["hazelcast"] != null)
+        hazelcast = props["hazelcast"]
+    
+	ant.copy (
+		file: hazelcast,
+		toFile:'tmp/WEB-INF/classes/hazelcast.xml',
+		overwrite:'true' )
 	
 	
 	/*
