turning down logging

--- a/src/main/webapp/WEB-INF/log4j.properties
+++ b/src/main/webapp/WEB-INF/log4j.properties
@@ -8,11 +8,11 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%X{webAppName} %d [%C{1}.%M] %m%n
 #log4j.appender.stdout.layout.ConversionPattern=%m%n
 
-log4j.logger.org.genedb.crawl=DEBUG
-log4j.logger.java.sql=DEBUG
-log4j.logger.com.ibatis=TRACE
-log4j.logger.org.postgresql=DEBUG
-log4j.logger.uk.ac.sanger.artemis.components.variant=DEBUG
+#log4j.logger.org.genedb.crawl=DEBUG
+#log4j.logger.java.sql=DEBUG
+#log4j.logger.com.ibatis=TRACE
+#log4j.logger.uk.ac.sanger.artemis.components.variant=DEBUG
+##log4j.logger.org.postgresql=DEBUG
 
 #log4j.logger.org.elasticsearch=DEBUG
 
