--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,7 @@ hazelcast=hazelcast-default.xml
 webArtemisGitUri=https://github.com/sanger-pathogens/Web-Artemis.git
 webArtemisGitBranch=master
 webArtemisInitialChromosome=Pf3D7_01
+
+# we need to set this for jettyRunWar to be able to communicate with the standalone hazelcast service wrapper
+# (the systemProp. prefix makes this a system property (-D) instead of gradle property (-P))
+systemProp.java.net.preferIPv4Stack=true
