--- a/resource-chado-gv1.properties
+++ b/resource-chado-gv1.properties
@@ -1,7 +1,8 @@
 deploy.dir=/Users/gv1/bin/tomcat/webapps/
 deploy.name=services
 
-alignments=etc/alignments.json
+alignments=
+#etc/alignments.json
 showParameters=true
 
 resource.type=chado-postgres
